
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;



__attribute__((used)) static void
process_compressed_8x8_brush_data(uint8 * in, uint8 * out, int Bpp)
{
 int x, y, pal_index, in_index, shift, do2, i;
 uint8 *pal;

 in_index = 0;
 pal = in + 16;

 for (y = 7; y >= 0; y--)
 {

  x = 0;
  for (do2 = 0; do2 < 2; do2++)
  {

   shift = 6;
   while (shift >= 0)
   {
    pal_index = (in[in_index] >> shift) & 3;

    for (i = 0; i < Bpp; i++)
    {
     out[(y * 8 + x) * Bpp + i] = pal[pal_index * Bpp + i];
    }
    x++;
    shift -= 2;
   }
   in_index++;
  }
 }
}
